force-app/main/default/objects/Special_Education__c.object
<CustomObject>
    <fields>
        <fullName>ReEvaluation_Frequency__c</fullName>
        <description>How often should the re-evaluation occur</description>
        <label>Re-Evaluation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>Gifted - No Re-Evaluation Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewedbySpecialEdDirector__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this student been reviewed by the Special Education Director</description>
        <label>Reviewed by Special Ed Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPED_Disability__c</fullName>
        <description>SP/ED Primary Disability</description>
        <label>SPED Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Communication (TECCA and ORCA use only)</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>Deaf_Blindness</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>Eligible Individual (IACA use only)</fullName>
                </value>
                <value>
                    <fullName>Gifted</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>ID - Mild</fullName>
                </value>
                <value>
                    <fullName>ID - Moderate</fullName>
                </value>
                <value>
                    <fullName>ID - Severe</fullName>
                </value>
                <value>
                    <fullName>Language (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Neurological (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>OHI</fullName>
                </value>
                <value>
                    <fullName>OHI-Major (Ohio use only)</fullName>
                </value>
                <value>
                    <fullName>OHI-Minor (Ohio use only)</fullName>
                </value>
                <value>
                    <fullName>Physical/OI</fullName>
                </value>
                <value>
                    <fullName>S/L</fullName>
                </value>
                <value>
                    <fullName>Sensory/Deaf-Blind (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/HI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/VI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>SLD</fullName>
                </value>
                <value>
                    <fullName>Speech (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>TBI</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPED_Secondary_Disability__c</fullName>
        <description>SP/ED Secondary Disability</description>
        <label>SPED Secondary Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Communication (TECCA and ORCA use only)</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>Gifted</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>ID - Mild</fullName>
                </value>
                <value>
                    <fullName>ID - Moderate</fullName>
                </value>
                <value>
                    <fullName>ID - Severe</fullName>
                </value>
                <value>
                    <fullName>Language (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Neurological (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>OHI</fullName>
                </value>
                <value>
                    <fullName>Physical/OI</fullName>
                </value>
                <value>
                    <fullName>S/L</fullName>
                </value>
                <value>
                    <fullName>Sensory/Deaf-Blind (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/HI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/VI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>SLD</fullName>
                </value>
                <value>
                    <fullName>Speech (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>TBI</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPED_Services_Exit_Date__c</fullName>
        <description>Date the student no longer receives Special Services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SPED Services Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPED_Services_Exit_Reason__c</fullName>
        <description>The reason the student no longer receives Special Services</description>
        <label>SPED Services Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aged out of Special Education</fullName>
                </value>
                <value>
                    <fullName>Evaluation is out of date</fullName>
                </value>
                <value>
                    <fullName>Evaluation no longer supports a disability</fullName>
                </value>
                <value>
                    <fullName>Graduated or exited High School</fullName>
                </value>
                <value>
                    <fullName>IEP not needed in this setting</fullName>
                </value>
                <value>
                    <fullName>Parent request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPED_Tertiary_Disability__c</fullName>
        <description>SP/ED Tertiary Disability</description>
        <label>SPED Tertiary Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Communication (TECCA and ORCA use only)</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>Gifted</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>ID - Mild</fullName>
                </value>
                <value>
                    <fullName>ID - Moderate</fullName>
                </value>
                <value>
                    <fullName>ID - Severe</fullName>
                </value>
                <value>
                    <fullName>Language (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Neurological (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>OHI</fullName>
                </value>
                <value>
                    <fullName>Physical/OI</fullName>
                </value>
                <value>
                    <fullName>S/L</fullName>
                </value>
                <value>
                    <fullName>Sensory/Deaf-Blind (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/HI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>Sensory/VI (TECCA use only)</fullName>
                </value>
                <value>
                    <fullName>SLD</fullName>
                </value>
                <value>
                    <fullName>Speech (FL, ID and IN only)</fullName>
                </value>
                <value>
                    <fullName>TBI</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Consult_Direct_SpEd_Type__c</fullName>
        <description>Consult/Direct Special Education Services</description>
        <label>Service Consult Direct SpEd Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Consult/Direct</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Itinerant</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Occupational_Type__c</fullName>
        <description>Occupational Therapy Services</description>
        <label>Service Occupational Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Consult/Direct</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Other1_Type__c</fullName>
        <description>Other Services</description>
        <label>Service Other1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Sign Language (ASL)</fullName>
                </value>
                <value>
                    <fullName>Assistive Technology</fullName>
                </value>
                <value>
                    <fullName>Autism Support</fullName>
                </value>
                <value>
                    <fullName>Behavior Support</fullName>
                </value>
                <value>
                    <fullName>Behavior Support (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Closed Captioning</fullName>
                </value>
                <value>
                    <fullName>Consult/Direct—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Consult—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Counseling</fullName>
                </value>
                <value>
                    <fullName>Counseling (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Direct—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Orientation and Mobility</fullName>
                </value>
                <value>
                    <fullName>Outside Academic Services</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Social Skills</fullName>
                </value>
                <value>
                    <fullName>Social Skills/Virtual</fullName>
                </value>
                <value>
                    <fullName>Social Work</fullName>
                </value>
                <value>
                    <fullName>Social Work (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Transition Services</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Adapted Physical Education (APE)</fullName>
                </value>
                <value>
                    <fullName>Nursing Services</fullName>
                </value>
                <value>
                    <fullName>Other Service Not Listed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Other2_Type__c</fullName>
        <description>Other Services</description>
        <label>Service Other2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Sign Language (ASL)</fullName>
                </value>
                <value>
                    <fullName>Assistive Technology</fullName>
                </value>
                <value>
                    <fullName>Autism Support</fullName>
                </value>
                <value>
                    <fullName>Behavior Support</fullName>
                </value>
                <value>
                    <fullName>Behavior Support (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Closed Captioning</fullName>
                </value>
                <value>
                    <fullName>Consult/Direct—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Consult—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Counseling</fullName>
                </value>
                <value>
                    <fullName>Counseling (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Direct—Do not choose</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Orientation and Mobility</fullName>
                </value>
                <value>
                    <fullName>Outside Academic Services</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Social Skills</fullName>
                </value>
                <value>
                    <fullName>Social Skills/Virtual</fullName>
                </value>
                <value>
                    <fullName>Social Work</fullName>
                </value>
                <value>
                    <fullName>Social Work (Virtual)</fullName>
                </value>
                <value>
                    <fullName>Transition Services</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Adapted Physical Education (APE)</fullName>
                </value>
                <value>
                    <fullName>Nursing Services</fullName>
                </value>
                <value>
                    <fullName>Other Service Not Listed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Speech_Language_Type__c</fullName>
        <description>Speech and Language Services</description>
        <label>Service Speech Language Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Consult/Direct</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>LiveSpeech</fullName>
                </value>
                <value>
                    <fullName>Other Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialEdCaseManager__c</fullName>
        <description>Special Ed Case Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Ed Case Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Education_Notes__c</fullName>
        <description>Special Education Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Education Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusofSpecialEdReview__c</fullName>
        <description>Status of Review</description>
        <label>Status of Special Ed Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacting Parent</fullName>
                </value>
                <value>
                    <fullName>Contacting Parent AND referred for RTI/SST</fullName>
                </value>
                <value>
                    <fullName>Gifted Review</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
                <value>
                    <fullName>Referred for a 504 Evaluation</fullName>
                </value>
                <value>
                    <fullName>Referred for Special Education Evaluation</fullName>
                </value>
                <value>
                    <fullName>Sent to RtI/SST</fullName>
                </value>
                <value>
                    <fullName>Sent to School Counselor</fullName>
                </value>
                <value>
                    <fullName>Sent to Grade Level Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierII_Behavior_Perf_Comment__c</fullName>
        <description>Please provide any comments regarding this student’s behavior performance that could help the teacher identify an appropriate intervention</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TierII Behavior Perf Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TierII_Behavior_Recommend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student is recommended for a BEHAVIOR intervention in the given school year</description>
        <label>TierII Behavior Recommend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TierII_Recommendation__c</fullName>
        <description>Interventions recommended for the given school year (if applicable)</description>
        <label>TierII Recommendation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Reading/Language Arts</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Special Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Educations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>